--- a/NavigationDrawer/res/layout/activity_main.xml
+++ b/NavigationDrawer/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="#111"/>
+        android:background="#aa111111"/>
     
     <ListView
         android:id="@+id/right_drawer"
@@ -53,5 +53,5 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="#111"/>
+        android:background="#aa111111"/>
 </android.support.v4.widget.DrawerLayout>
